tests/snapshots/test_pnpm_12_workspace.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `22.x`
  - Resolved Node.js version: `22.23.3`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.23.3/node-v22.23.3-<arch>.tar.gz ... (<time_elapsed>)
  - Validating ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.23.3 (<arch>)`
  - Installing Node.js `22.23.3 (<arch>)` ... (<time_elapsed>)
- Determining pnpm package information
  - Found `packageManager` set to `pnpm@12.1.0` in `package.json`
  - GET https://registry.npmjs.org/pnpm ... (<time_elapsed>)
  - Resolved pnpm version `12.1.0` to `12.1.0`
- Installing pnpm
  - GET https://registry.npmjs.org/pnpm/-/pnpm-12.1.0.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - GET https://registry.npmjs.org/@pnpm/exe.<arch> ... (<time_elapsed>)
  - GET https://registry.npmjs.org/@pnpm/exe.<arch>/-/exe.<arch>-12.1.0.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Successfully installed `pnpm@12.1.0`
- Setting up pnpm dependency store
  - Creating new pnpm content-addressable store
  - Creating pnpm virtual store
- Installing dependencies
  - Running `pnpm install --frozen-lockfile`

      Scope: all 3 workspace projects
      ? Verifying lockfile against supply-chain policies (<N> entries)...
      Packages are hard linked from the content-addressable store to the virtual store.
        Content-addressable store is at: /layers/heroku_nodejs/addressable/v11
        Virtual store is at:             ../layers/heroku_nodejs/virtual/store
      Packages: +85
      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

      devDependencies:
      + typescript 5.9.3

      Done in <time_elapsed> using pnpm v12.1.0

  - Done (<time_elapsed>)
- Pruning unused dependencies from pnpm content-addressable store
  - Running `pnpm store prune`

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `pnpm install --prod --frozen-lockfile`

      Scope: all 3 workspace projects
      Already up to date
      Done in <time_elapsed> using pnpm v12.1.0

  - Done (<time_elapsed>)
- Removing non-deterministic build artifacts before export
  - Removed pnpm metadata file node_modules/.modules.yaml
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:pnpm'
Adding layer 'heroku/nodejs:virtual'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'heroku/nodejs:z_node_module_bins'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding layer 'buildpacksio/lifecycle:process-types'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
Setting default process type 'web'
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:addressable'
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:pnpm'
Adding cache layer 'heroku/nodejs:pnpm_exe_packument'
Adding cache layer 'heroku/nodejs:pnpm_packument'
Successfully built image '<image-name>'

--------------------------------------------- REBUILD ---------------------------------------------
===> ANALYZING
Restoring data for SBOM from previous image
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `22.x`
  - Resolved Node.js version: `22.23.3`
- Installing Node.js distribution
  - Reusing Node.js 22.23.3 (<arch>)
- Determining pnpm package information
  - Found `packageManager` set to `pnpm@12.1.0` in `package.json`
  - GET https://registry.npmjs.org/pnpm ... (Not Modified)
  - Using cached packument for pnpm
  - Resolved pnpm version `12.1.0` to `12.1.0`
- Installing pnpm
  - Using cached version of pnpm
  - Successfully installed `pnpm@12.1.0`
- Setting up pnpm dependency store
  - Restoring pnpm content-addressable store from cache
  - Creating pnpm virtual store
- Installing dependencies
  - Running `pnpm install --frozen-lockfile`

      Scope: all 3 workspace projects
      ? Verifying lockfile against supply-chain policies (<N> entries)...
      Packages are hard linked from the content-addressable store to the virtual store.
        Content-addressable store is at: /layers/heroku_nodejs/addressable/v11
        Virtual store is at:             ../layers/heroku_nodejs/virtual/store
      Packages: +85
      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

      devDependencies:
      + typescript 5.9.3

      The integrity of <N> files was checked, because their timestamps changed since the store recorded them. A backup tool, an antivirus scan, or a copied store can cause this.
      Done in <time_elapsed> using pnpm v12.1.0

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `pnpm install --prod --frozen-lockfile`

      Scope: all 3 workspace projects
      Already up to date
      The integrity of <N> files was checked, because their timestamps changed since the store recorded them. A backup tool, an antivirus scan, or a copied store can cause this.
      Done in <time_elapsed> using pnpm v12.1.0

  - Done (<time_elapsed>)
- Removing non-deterministic build artifacts before export
  - Removed pnpm metadata file node_modules/.modules.yaml
- Done (finished in <time_elapsed>)
===> EXPORTING
Reusing layer 'heroku/nodejs:available_parallelism'
Reusing layer 'heroku/nodejs:dist'
Reusing layer 'heroku/nodejs:pnpm'
Reusing layer 'heroku/nodejs:virtual'
Reusing layer 'heroku/nodejs:web_env'
Reusing layer 'heroku/nodejs:z_node_module_bins'
Reusing layer 'buildpacksio/lifecycle:launch.sbom'
Reused 1/1 app layer(s)
Reusing layer 'buildpacksio/lifecycle:launcher'
Reusing layer 'buildpacksio/lifecycle:config'
Reusing layer 'buildpacksio/lifecycle:process-types'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
Setting default process type 'web'
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Reusing cache layer 'heroku/nodejs:addressable'
Reusing cache layer 'heroku/nodejs:dist'
Reusing cache layer 'heroku/nodejs:pnpm'
Reusing cache layer 'heroku/nodejs:pnpm_packument'
Successfully built image '<image-name>'
