tests/snapshots/test_yarn_1_native_modules_are_recompiled_even_on_cache_restore.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Node.js version not specified, using `24.x`
  - Resolved Node.js version: `24.21.0`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v24.21.0/node-v24.21.0-<arch>.tar.gz ... (<time_elapsed>)
  - Validating ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `24.21.0 (<arch>)`
  - Installing Node.js `24.21.0 (<arch>)` ... (<time_elapsed>)
- Determining Yarn information
  - Found `packageManager` set to `yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e` in `package.json`
  - GET https://registry.npmjs.org/yarn ... (<time_elapsed>)
  - Resolved yarn version `1.22.22` to `1.22.22`
- Installing Yarn
  - GET https://registry.npmjs.org/yarn/-/yarn-1.22.22.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Successfully installed `yarn@1.22.22`
- Setting up yarn dependency cache
  - Running `yarn config set cache-folder /layers/heroku_nodejs/yarn_cache`

      yarn config v1.22.22
      success Set "cache-folder" to "/layers/heroku_nodejs/yarn_cache".
      Done in <time_elapsed>.

  - Done (<time_elapsed>)
- Installing dependencies
  - Running `yarn install "--production=false" --frozen-lockfile`

      yarn install v1.22.22
      [1/4] Resolving packages...
      [2/4] Fetching packages...
      [3/4] Linking dependencies...
      [4/4] Building fresh packages...
      Done in <time_elapsed>.

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `yarn install --production --frozen-lockfile --ignore-engines --ignore-scripts --prefer-offline`

      yarn install v1.22.22
      [1/4] Resolving packages...
      [2/4] Fetching packages...
      [3/4] Linking dependencies...
      [4/4] Building fresh packages...
      Done in <time_elapsed>.

  - Done (<time_elapsed>)
- Removing non-deterministic build artifacts before export
  - Removed 1 Makefile artifact from the application directory
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'heroku/nodejs:yarn'
Adding layer 'heroku/nodejs:z_node_module_bins'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:yarn'
Adding cache layer 'heroku/nodejs:yarn_cache'
Adding cache layer 'heroku/nodejs:yarn_packument'
Successfully built image '<image-name>'

--------------------------------------------- REBUILD ---------------------------------------------
===> ANALYZING
Restoring data for SBOM from previous image
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Node.js version not specified, using `24.x`
  - Resolved Node.js version: `24.21.0`
- Installing Node.js distribution
  - Reusing Node.js 24.21.0 (<arch>)
- Determining Yarn information
  - Found `packageManager` set to `yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e` in `package.json`
  - GET https://registry.npmjs.org/yarn ... (Not Modified)
  - Using cached packument for yarn
  - Resolved yarn version `1.22.22` to `1.22.22`
- Installing Yarn
  - Using cached version of yarn
  - Successfully installed `yarn@1.22.22`
- Setting up yarn dependency cache
  - Restoring yarn dependency cache
  - Running `yarn config set cache-folder /layers/heroku_nodejs/yarn_cache`

      yarn config v1.22.22
      success Set "cache-folder" to "/layers/heroku_nodejs/yarn_cache".
      Done in <time_elapsed>.

  - Done (<time_elapsed>)
- Installing dependencies
  - Running `yarn install "--production=false" --frozen-lockfile`

      yarn install v1.22.22
      [1/4] Resolving packages...
      [2/4] Fetching packages...
      [3/4] Linking dependencies...
      [4/4] Building fresh packages...
      Done in <time_elapsed>.

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `yarn install --production --frozen-lockfile --ignore-engines --ignore-scripts --prefer-offline`

      yarn install v1.22.22
      [1/4] Resolving packages...
      [2/4] Fetching packages...
      [3/4] Linking dependencies...
      [4/4] Building fresh packages...
      Done in <time_elapsed>.

  - Done (<time_elapsed>)
- Removing non-deterministic build artifacts before export
  - Removed 1 Makefile artifact from the application directory
- Done (finished in <time_elapsed>)
===> EXPORTING
Reusing layer 'heroku/nodejs:available_parallelism'
Reusing layer 'heroku/nodejs:dist'
Reusing layer 'heroku/nodejs:web_env'
Reusing layer 'heroku/nodejs:yarn'
Reusing layer 'heroku/nodejs:z_node_module_bins'
Reusing layer 'buildpacksio/lifecycle:launch.sbom'
Reused 1/1 app layer(s)
Reusing layer 'buildpacksio/lifecycle:launcher'
Reusing layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Reusing cache layer 'heroku/nodejs:dist'
Reusing cache layer 'heroku/nodejs:yarn'
Reusing cache layer 'heroku/nodejs:yarn_cache'
Reusing cache layer 'heroku/nodejs:yarn_packument'
Successfully built image '<image-name>'
